// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form container tests suite should return correct render before request return 1`] = `
<DocumentFragment>
  <form
    class="form"
  >
    <div
      class="form__line"
    >
      <label
        class="form__label"
        for="githubAccount"
      >
        Compte Github
      </label>
      <div
        class="form__input-container"
      >
        <input
          id="githubAccount"
          name="githubAccount"
          value=""
        />
      </div>
    </div>
    <div
      class="form__line form__line--alone"
    >
      <button
        class="btn btn--search"
        data-testid="button"
      >
        Rechercher
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Form container tests suite should show All User on load 1`] = `
<DocumentFragment>
  <form
    class="form"
  >
    <div
      class="form__line"
    >
      <label
        class="form__label"
        for="githubAccount"
      >
        Compte Github
      </label>
      <div
        class="form__input-container"
      >
        <input
          id="githubAccount"
          name="githubAccount"
          value=""
        />
      </div>
    </div>
    <div
      class="form__line form__line--alone"
    >
      <button
        class="btn btn--search"
        data-testid="button"
      >
        Rechercher
      </button>
    </div>
  </form>
  <div
    class="user-list"
    data-testid="userlist"
    style=""
  >
    <div
      class="user-card"
      data-testid="usercard"
    >
      <a
        class="user-card__link"
        href="http://urluser1"
      >
        <img
          alt="johnpapa"
          class="user-card__avatar"
          src="http://urlimageuser1"
        />
        <span
          class="user-card__login"
        >
          johnpapa
        </span>
      </a>
    </div>
    <div
      class="user-card"
      data-testid="usercard"
    >
      <a
        class="user-card__link"
        href="http://urluser2"
      >
        <img
          alt="gaearon"
          class="user-card__avatar"
          src="http://urlimageuser2"
        />
        <span
          class="user-card__login"
        >
          gaearon
        </span>
      </a>
    </div>
    <div
      class="user-card"
      data-testid="usercard"
    >
      <a
        class="user-card__link"
        href="http://urluser3"
      >
        <img
          alt="kentcdodds"
          class="user-card__avatar"
          src="http://urlimageuser3"
        />
        <span
          class="user-card__login"
        >
          kentcdodds
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
